--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "expo": "~52.0.30",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-linear-gradient": "~13.0.2",
+    "react-native": "0.75.4",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.0",
+    "expo-splash-screen": "~0.29.16",
+    "expo-linear-gradient": "~14.0.1",
     "expo-haptics": "~13.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-clipboard": "~6.0.3",
-    "expo-secure-store": "~13.0.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "lucide-react-native": "^0.263.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-clipboard": "~7.0.0",
+    "expo-secure-store": "~14.0.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.1.0",
     "@expo-google-fonts/nunito": "^0.2.3",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.24.0",
+    "@expo/vector-icons": "^14.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
